--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,15 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@shop/*":["src/app/@public/*"],
+      "@admin/*":["src/app/@admin/*"],
+      "@admin-core/*":["src/app/@admin/core/*"],
+      "@shop-core/*":["src/app/@public/core/*"],
+      "@graphql/*":["src/app/@graphql/*"],
+      "@core/*":["src/app/@core/*"],
+      "@shared/*":["src/app/@shared/*"],
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
