--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@mugan86/ng-shop-ui": "^0.2.3",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "apollo-angular": "^1.9.0",
     "apollo-angular-link-http": "^1.10.0",
